--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<div id="app"></div>
+<!DOCTYPE html>
+<html>
+  <head> </head>
+
+  <body>
+    <h1>hello world</h1>
+    <div id="app"></div>
+  </body>
+</html>
